{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 48,
  "lineage": "8980684e-2872-3861-4846-75867969cffd",
  "resources": [
    {
      "mode": "data",
      "type": "aws_lb",
      "name": "formation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:208030346312:loadbalancer/app/zinovia-formation-prod-alb/476ee206c7d3240a",
            "arn_suffix": "app/zinovia-formation-prod-alb/476ee206c7d3240a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "zinovia-formation-prod-alb-635329215.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:208030346312:loadbalancer/app/zinovia-formation-prod-alb/476ee206c7d3240a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "zinovia-formation-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-01c313d439bc1ca11"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05958df9bb663b259"
              },
              {
                "subnet_id": "subnet-08b23492b33c92edd"
              },
              {
                "subnet_id": "subnet-0e84157288b0410a7"
              }
            ],
            "subnets": [
              "subnet-05958df9bb663b259",
              "subnet-08b23492b33c92edd",
              "subnet-0e84157288b0410a7"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "zinovia",
              "Project": "zinovia-formation"
            },
            "vpc_id": "vpc-04096ae7aea767aa8",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          }
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_lb_listener",
      "name": "formation_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:208030346312:listener/app/zinovia-formation-prod-alb/476ee206c7d3240a/c6f9329dacf4fe67",
            "certificate_arn": "arn:aws:acm:us-east-1:208030346312:certificate/033c5816-9146-4e16-ba47-deb995fac892",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "application/json",
                    "message_body": "{\"error\":\"Not Found\"}",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:208030346312:listener/app/zinovia-formation-prod-alb/476ee206c7d3240a/c6f9329dacf4fe67",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:208030346312:loadbalancer/app/zinovia-formation-prod-alb/476ee206c7d3240a",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "zinovia",
              "Project": "zinovia-formation"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208030346312:vpc/vpc-04096ae7aea767aa8",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0f293fbb152804db1",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-04598215c5a7efe3d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04096ae7aea767aa8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b57dd0d45c3180f9",
            "owner_id": "208030346312",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Name": "zinovia-fans-prod-vpc",
              "Project": "zinovia-fans"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:208030346312:targetgroup/saf-logistic-prod-api-tg/b83c068102beaed7",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:208030346312:listener-rule/app/zinovia-formation-prod-alb/476ee206c7d3240a/c6f9329dacf4fe67/460d3cb17e4c4c73",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "api-saf.dataforgeai.fr"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:208030346312:listener-rule/app/zinovia-formation-prod-alb/476ee206c7d3240a/c6f9329dacf4fe67/460d3cb17e4c4c73",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:208030346312:listener/app/zinovia-formation-prod-alb/476ee206c7d3240a/c6f9329dacf4fe67",
            "priority": 30,
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "akhai",
              "Project": "saf-logistic"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.api",
            "data.aws_lb.formation",
            "data.aws_lb_listener.formation_https",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:208030346312:targetgroup/saf-logistic-prod-web-tg/07686b2b031cc806",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:208030346312:listener-rule/app/zinovia-formation-prod-alb/476ee206c7d3240a/c6f9329dacf4fe67/44f8859fac779b94",
            "condition": [
              {
                "host_header": [
                  {
                    "values": [
                      "saf.dataforgeai.fr"
                    ]
                  }
                ],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:208030346312:listener-rule/app/zinovia-formation-prod-alb/476ee206c7d3240a/c6f9329dacf4fe67/44f8859fac779b94",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:208030346312:listener/app/zinovia-formation-prod-alb/476ee206c7d3240a/c6f9329dacf4fe67",
            "priority": 35,
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "akhai",
              "Project": "saf-logistic"
            }
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_target_group.web",
            "data.aws_lb.formation",
            "data.aws_lb_listener.formation_https",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:208030346312:targetgroup/saf-logistic-prod-api-tg/b83c068102beaed7",
            "arn_suffix": "targetgroup/saf-logistic-prod-api-tg/b83c068102beaed7",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:208030346312:targetgroup/saf-logistic-prod-api-tg/b83c068102beaed7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:208030346312:loadbalancer/app/zinovia-formation-prod-alb/476ee206c7d3240a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "saf-logistic-prod-api-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "akhai",
              "Project": "saf-logistic"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04096ae7aea767aa8"
          },
          "dependencies": [
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:208030346312:targetgroup/saf-logistic-prod-web-tg/07686b2b031cc806",
            "arn_suffix": "targetgroup/saf-logistic-prod-web-tg/07686b2b031cc806",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:208030346312:targetgroup/saf-logistic-prod-web-tg/07686b2b031cc806",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:208030346312:loadbalancer/app/zinovia-formation-prod-alb/476ee206c7d3240a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "saf-logistic-prod-web-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "akhai",
              "Project": "saf-logistic"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04096ae7aea767aa8"
          },
          "dependencies": [
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208030346312:security-group/sg-01b71d9b34331faf4",
            "description": "SAF-Logistic ECS backend tasks (API + Worker)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01b71d9b34331faf4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "From Formation ALB on API port",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c313d439bc1ca11"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "saf-logistic-prod-ecs-backend-20260324211659934900000005",
            "name_prefix": "saf-logistic-prod-ecs-backend-",
            "owner_id": "208030346312",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "akhai",
              "Project": "saf-logistic"
            },
            "timeouts": null,
            "vpc_id": "vpc-04096ae7aea767aa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.existing"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:208030346312:security-group/sg-047a00046f04ac315",
            "description": "SAF-Logistic ECS web tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047a00046f04ac315",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "From Formation ALB on Web port",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c313d439bc1ca11"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "saf-logistic-prod-ecs-web-20260324211659851300000004",
            "name_prefix": "saf-logistic-prod-ecs-web-",
            "owner_id": "208030346312",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Owner": "akhai",
              "Project": "saf-logistic"
            },
            "timeouts": null,
            "vpc_id": "vpc-04096ae7aea767aa8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_vpc.existing"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_from_saf_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SAF-Logistic backend (API + Worker) to reach shared RDS",
            "from_port": 5432,
            "id": "sgrule-3281134891",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0af2b56a2eed179bb",
            "security_group_rule_id": "sgr-01b7f75d00ac16432",
            "self": false,
            "source_security_group_id": "sg-01b71d9b34331faf4",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ecs_backend",
            "data.aws_vpc.existing"
          ]
        }
      ]
    }
  ]
}